--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,24 +1,16 @@
-name: push
+name: lint
 on: [push, pull_request]
 
 jobs:
   lint:
+    strategy:
+      matrix:
+        goVer: [1.12 1.13 1.14]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: docker://golangci/golangci-lint:v1.23.8
         with:
           args: golangci-lint run
-        env:
-          CGO_ENABLED: 0
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
-        with:
-          go-version: 1.14
-      - run: go test -cover ./...
         env:
           CGO_ENABLED: 0
