--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,5 @@ jobs:
       - run: go test -cover ./...
         env:
           CGO_ENABLED: 0
+      - name: Codecov
+        uses: codecov/codecov-action@v1.0.12
