--- a/codecov.yml
+++ b/codecov.yml
@@ -1,15 +1,20 @@
-# Team Yaml
+codecov:
+  require_ci_to_pass: yes
+
 coverage:
+  precision: 2
   round: down
-  precision: 5
+  range: "70...100"
 
-# Repository Yaml
-coverage:
-  round: up
-  range: 0..10
+parsers:
+  gcov:
+    branch_detection:
+      conditional: yes
+      loop: yes
+      method: no
+      macro: no
 
-# Used in Codecov after updating
-coverage:
-  round: up
-  range: 0..10
-  precision: 5
+comment:
+  layout: "reach,diff,flags,tree"
+  behavior: default
+  require_changes: no
