--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -1,5 +1,5 @@
 name: telegram
-on: [push, pull_request, create, fork, issue_comment, issues, pull_request_review, pull_request_review_comment]
+on: [push, create, fork, issue_comment, issues, pull_request_review, pull_request_review_comment]
 jobs:
   build:
     runs-on: ubuntu-latest
