--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -1,9 +1,10 @@
 name: telegram
-on: [push, pull_request, create, fork, issue_comment, issues, pull_request_review, pull_request_review_comment]
+on: [push, create, fork, issue_comment, issues, pull_request_review, pull_request_review_comment]
 jobs:
   build:
     runs-on: ubuntu-latest
     name: telegram notification
+    if: github.repository_owner == 'moshebe'
     steps:
       - uses: actions/checkout@master
       - name: send telegram notification to Gebug tracking group
