--- a/pkg/setup/testdata/vscode_disable_2.in
+++ b/pkg/setup/testdata/vscode_disable_2.in
@@ -1,4 +1,7 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -16,7 +19,7 @@
             "request": "attach",
             "mode": "remote",
             "remotePath": "/src",
-            "port": 40000,
+            "port": 43210,
             "host": "127.0.0.1"
         }
     ]
