--- a/pkg/webui/frontend/package.json
+++ b/pkg/webui/frontend/package.json
@@ -17,15 +17,21 @@
     "core-js": "^3.6.5",
     "vee-validate": "^3.4.1",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
     "vue-material": "^1.0.0-beta-15",
+    "vue-property-decorator": "^8.4.2",
     "vuelidate": "^0.7.5",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.5.2",
     "eslint": "^6.8.0",
@@ -35,6 +41,7 @@
     "portal-vue": "^2.1.7",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
+    "typescript": "~3.9.3",
     "vue-cli-plugin-bootstrap-vue": "~0.7.0",
     "vue-template-compiler": "^2.6.11"
   },
@@ -45,10 +52,11 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
