wip - move webui directory

--- a/webui/frontend/tsconfig.json
+++ b/webui/frontend/tsconfig.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "noImplicitAny": false,
     "types": [
       "webpack-env"
