--- a/webui/frontend/package.json
+++ b/webui/frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
     "vuelidate": "^0.7.5",
     "yup": "^0.29.3"
   },
@@ -26,7 +28,6 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
-    "bootstrap": "^4.5.2",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "mutationobserver-shim": "^0.3.7",
