--- a/.github/workflows/webui.yml
+++ b/.github/workflows/webui.yml
@@ -12,22 +12,30 @@ env:
 
 jobs:
   dockerhub:
+    name: Push Web UI Docker image to Docker Hub
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
         with:
-            username: gebug
-            password: ${{ secrets.DOCKERHUB_PASS }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-            context: .
-            file: webui/Dockerfile
-            platforms: linux/amd64,linux/arm64,linux/386
-            push: true
-            tags: gebug/webui:latest
+          username: gebug
+          password: ${{ secrets.DOCKERHUB_PASS }}
+          repository: gebug/webui:latest
+#          tag_with_ref: true
+
+#      - uses: actions/checkout@v2
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#            username: gebug
+#            password: ${{ secrets.DOCKERHUB_PASS }}
+#      - name: Build and push
+#        uses: docker/build-push-action@v2
+#        with:
+#            context: .
+#            file: webui/Dockerfile
+#            platforms: linux/amd64,linux/arm64,linux/386
+#            push: true
+#            tags: gebug/webui:latest
