--- a/.github/workflows/webui.yml
+++ b/.github/workflows/webui.yml
@@ -22,6 +22,7 @@ jobs:
             username: gebug
             password: ${{ secrets.DOCKERHUB_PASS }}
       - name: Push to Docker Hub
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
             context: .
