--- a/webui/frontend/package.json
+++ b/webui/frontend/package.json
@@ -11,6 +11,7 @@
     "@braid/vue-formulate": "^2.4.5",
     "@vue/composition-api": "^1.0.0-beta.16",
     "axios": "^0.20.0",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
@@ -28,6 +29,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.5.2",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "mutationobserver-shim": "^0.3.7",
