--- a/.github/workflows/webui.yml
+++ b/.github/workflows/webui.yml
@@ -1,5 +1,11 @@
 name: webui
-on: push
+on:
+- push
+  paths:
+    - "webui/*"
+  branches:
+    - master
+    - main
 env:
   IMAGE_NAME: gebug-webui
 
