--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ jobs:
   lint:
     strategy:
       matrix:
-        goVer: [1.12 1.13 1.14]
+        goVer: [1.17]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
