--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        goVer: [1.13, 1.14, 1.17]
+        goVer: [1.17]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
