--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.46.2
+          version: v1.52.2
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.18.x
+          go-version: '1.20'
       - name: Checkout code
         uses: actions/checkout@v3
       - uses: actions/cache@v2
