--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,23 +4,18 @@ on:
     tags:
       - "*"
 jobs:
-  build:
-    name: Build
+  releaser:
+    name: go-releaser
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # See: https://goreleaser.com/ci/actions/
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - run: git fetch --force --tags
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-        id: go
-
-      - name: Release
-        uses: goreleaser/goreleaser-action@master
+          go-version: stable
+      - uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
           args: release --clean
